--- a/About me.html
+++ b/About me.html
@@ -109,7 +109,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://MorrisKyalo.github.io/my-site">MorrisKyalo</a></li></ul>
+						<ul><li>&copy; Untitled</li><li>Design: <a href="https://mauricekyallo1@gmail.com">MorrisKyalo</a></li></ul>
 					</div>
 
 			</div>
