--- a/elements.html
+++ b/elements.html
@@ -478,7 +478,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://mauricekyallo1@gmail.com">MorrisKyalo</a></li></ul>
+						<ul><li>&copy; Untitled</li><li>Design: <a href="https://morriskyalo.github.io">MorrisKyalo</a></li></ul>
 					</div>
 
 			</div>
