--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://mauricekyallo1@gmail.com">MorrisKyalo</a></li></ul>
+						<ul><li>&copy; Untitled</li><li>Design: <a href="https://morriskyalo.github.io">MorrisKyalo</a></li></ul>
 					</div>
 
 			</div>
