--- a/elements.html
+++ b/elements.html
@@ -60,19 +60,19 @@
 									<hr />
 									<header>
 										<h2>Heading with a Subtitle</h2>
-										<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+										<p>I'm Morris Kyalo</p>
 									</header>
-									<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+									<p>I am a Graphic designer, Web designer & developer, Content writer, Advertiser & Marketer, UX/UI designer, Freelance and Blogger.</p>
 									<header>
-										<h3>Heading with a Subtitle</h3>
-										<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+										<h3>I'm Morris Kyalo</h3>
+										<p>I am a Graphic designer, Web designer & developer, Content writer, Advertiser & Marketer, UX/UI designer, Freelance and Blogger.</p>
 									</header>
-									<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+									<p>I do Graphic designning, Web designning & developping, Content writing, Advertising & Marketing, UX/UI designning, Freelancing and Blogging.</p>
 									<header>
 										<h4>Heading with a Subtitle</h4>
-										<p>Lorem ipsum dolor sit amet nullam id egestas urna aliquam</p>
+										<p>I'm Morris Kyalo</p>
 									</header>
-									<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+									<p>I do Graphic designning, Web designning & developping, Content writing, Advertising & Marketing, UX/UI designning, Freelancing and Blogging.</p>
 
 									<hr />
 
@@ -83,18 +83,24 @@
 
 											<h3>Unordered</h3>
 											<ul>
-												<li>Dolor pulvinar etiam.</li>
-												<li>Sagittis lorem eleifend.</li>
-												<li>Felis feugiat dolore viverra.</li>
-												<li>Dolor pulvinar etiam.</li>
+												<li> Graphic designning.</li>
+												<li>Web designning & developping.</li>
+												<li>Content writing.</li>
+												<li>Advertising & Marketing.</li>
+												<li>UX/UI designning.</li>
+												<li>UX/UI Freelancing.</li>
+												<li>UX/UI Blogging.</li>
 											</ul>
 
 											<h3>Alternate</h3>
 											<ul class="alt">
-												<li>Dolor pulvinar etiam etiam.</li>
-												<li>Sagittis adipiscing eleifend.</li>
-												<li>Felis enim dolore viverra.</li>
-												<li>Dolor pulvinar etiam etiam.</li>
+												<li> Graphic designning.</li>
+												<li>Web designning & developping.</li>
+												<li>Content writing.</li>
+												<li>Advertising & Marketing.</li>
+												<li>UX/UI designning.</li>
+												<li>Freelancing.</li>
+												<li>UX/UI Blogging.</li>
 											</ul>
 
 										</div>
@@ -102,11 +108,13 @@
 
 											<h3>Ordered</h3>
 											<ol>
-												<li>Dolor pulvinar etiam.</li>
-												<li>Etiam vel felis at viverra.</li>
-												<li>Felis enim feugiat magna.</li>
-												<li>Etiam vel felis nullam.</li>
-												<li>Felis enim et tempus.</li>
+												<li> Graphic designning.</li>
+												<li>Web designning & developping.</li>
+												<li>Content writing.</li>
+												<li>Advertising & Marketing.</li>
+												<li>UX/UI designning.</li>
+												<li>Freelancing.</li>
+												<li>UX/UI Blogging.</li>
 											</ol>
 
 											<h3>Icons</h3>
@@ -131,15 +139,15 @@
 									<dl>
 										<dt>Item 1</dt>
 										<dd>
-											<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
+											<p>I am a Graphic designer, Web designer & developer, Content writer, Advertiser & Marketer, UX/UI designer, Freelance and Blogger.</p>
 										</dd>
 										<dt>Item 2</dt>
 										<dd>
-											<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
+											<p>I am a Graphic designer, Web designer & developer, Content writer, Advertiser & Marketer, UX/UI designer, Freelance and Blogger.</p>
 										</dd>
 										<dt>Item 3</dt>
 										<dd>
-											<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
+											<p>I am a Graphic designer, Web designer & developer, Content writer, Advertiser & Marketer, UX/UI designer, Freelance and Blogger.</p>
 										</dd>
 									</dl>
 
@@ -185,7 +193,7 @@
 
 								<!-- Blockquote -->
 									<h2>Blockquote</h2>
-									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis.</blockquote>
+									<blockquote>I do Graphic designning, Web designning & developping, Content writing, Advertising & Marketing, UX/UI designning, Freelancing and Blogging.</blockquote>
 
 									<hr />
 
@@ -205,27 +213,37 @@
 											<tbody>
 												<tr>
 													<td>Item 1</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
+													<td>Graphic designning</td>
 													<td>29.99</td>
 												</tr>
 												<tr>
 													<td>Item 2</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
+													<td>Web designning & developping.</td>
 													<td>19.99</td>
 												</tr>
 												<tr>
 													<td>Item 3</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
+													<td> Content writing.</td>
 													<td>29.99</td>
 												</tr>
 												<tr>
 													<td>Item 4</td>
-													<td>Vitae integer tempus condimentum.</td>
+													<td>Advertising & Marketing.</td>
 													<td>19.99</td>
 												</tr>
 												<tr>
 													<td>Item 5</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
+													<td>UX/UI designning.</td>
+													<td>29.99</td>
+												</tr>
+												<tr>
+													<td>Item 5</td>
+													<td>Freelancing.</td>
+													<td>29.99</td>
+												</tr>
+												<tr>
+													<td>Item 5</td>
+													<td>Blogging</td>
 													<td>29.99</td>
 												</tr>
 											</tbody>
@@ -251,27 +269,37 @@
 											<tbody>
 												<tr>
 													<td>Item 1</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
+													<td>Graphic designning</td>
 													<td>29.99</td>
 												</tr>
 												<tr>
 													<td>Item 2</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
+													<td>Web designning & developping.</td>
 													<td>19.99</td>
 												</tr>
 												<tr>
 													<td>Item 3</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
+													<td> Content writing.</td>
 													<td>29.99</td>
 												</tr>
 												<tr>
 													<td>Item 4</td>
-													<td>Vitae integer tempus condimentum.</td>
+													<td>Advertising & Marketing.</td>
 													<td>19.99</td>
 												</tr>
 												<tr>
 													<td>Item 5</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
+													<td>UX/UI designning.</td>
+													<td>29.99</td>
+												</tr>
+												<tr>
+													<td>Item 5</td>
+													<td>Freelancing.</td>
+													<td>29.99</td>
+												</tr>
+												<tr>
+													<td>Item 5</td>
+													<td>Blogging.</td>
 													<td>29.99</td>
 												</tr>
 											</tbody>
