--- a/elements.html
+++ b/elements.html
@@ -64,8 +64,8 @@
 									</header>
 									<p>I am a Graphic designer, Web designer & developer, Content writer, Advertiser & Marketer, UX/UI designer, Freelance and Blogger.</p>
 									<header>
-										<h3>I'm Morris Kyalo</h3>
-										<p>I am a Graphic designer, Web designer & developer, Content writer, Advertiser & Marketer, UX/UI designer, Freelance and Blogger.</p>
+										<h2>Heading with a Subtitle</h2>
+										<p>I'm Morris Kyalo</p>
 									</header>
 									<p>I do Graphic designning, Web designning & developping, Content writing, Advertising & Marketing, UX/UI designning, Freelancing and Blogging.</p>
 									<header>
