--- a/elements.html
+++ b/elements.html
@@ -83,24 +83,24 @@
 
 											<h3>Unordered</h3>
 											<ul>
-												<li> Graphic designning.</li>
+												<li>Graphic designning.</li>
 												<li>Web designning & developping.</li>
 												<li>Content writing.</li>
 												<li>Advertising & Marketing.</li>
 												<li>UX/UI designning.</li>
 												<li>UX/UI Freelancing.</li>
-												<li>UX/UI Blogging.</li>
+												<li>Blogging.</li>
 											</ul>
 
 											<h3>Alternate</h3>
 											<ul class="alt">
-												<li> Graphic designning.</li>
+												<li>Graphic designning.</li>
 												<li>Web designning & developping.</li>
 												<li>Content writing.</li>
 												<li>Advertising & Marketing.</li>
 												<li>UX/UI designning.</li>
 												<li>Freelancing.</li>
-												<li>UX/UI Blogging.</li>
+												<li>UBlogging.</li>
 											</ul>
 
 										</div>
@@ -108,13 +108,13 @@
 
 											<h3>Ordered</h3>
 											<ol>
-												<li> Graphic designning.</li>
+												<li>Graphic designning.</li>
 												<li>Web designning & developping.</li>
 												<li>Content writing.</li>
 												<li>Advertising & Marketing.</li>
 												<li>UX/UI designning.</li>
 												<li>Freelancing.</li>
-												<li>UX/UI Blogging.</li>
+												<li>Blogging.</li>
 											</ol>
 
 											<h3>Icons</h3>
@@ -139,15 +139,15 @@
 									<dl>
 										<dt>Item 1</dt>
 										<dd>
-											<p>I am a Graphic designer, Web designer & developer, Content writer, Advertiser & Marketer, UX/UI designer, Freelance and Blogger.</p>
+											<p>Graphic designing -is the arts of assembling together images, typography, or motion graphics to create a piece of design. Graphic Designers are also responsible for typesetting, illustration, user interfaces, and web design.</p>
 										</dd>
 										<dt>Item 2</dt>
 										<dd>
-											<p>I am a Graphic designer, Web designer & developer, Content writer, Advertiser & Marketer, UX/UI designer, Freelance and Blogger.</p>
+											<p>Web designning & developing - Web designing deals with the design of the user interfce aspect of websites that are displayed on the internet whereas development deals with the aspects such as; web publishing, web programming, and database management respectively</p>
 										</dd>
 										<dt>Item 3</dt>
 										<dd>
-											<p>I am a Graphic designer, Web designer & developer, Content writer, Advertiser & Marketer, UX/UI designer, Freelance and Blogger.</p>
+											<p>UX/UI designning - is the process design teams use to create products that provide meaningful and relevant experiences to users. This involves the design of the entire process of acquiring and integrating the product, including aspects of branding, design, usability and function.</p>
 										</dd>
 									</dl>
 
