--- a/elements.html
+++ b/elements.html
@@ -100,7 +100,7 @@
 												<li>Advertising & Marketing.</li>
 												<li>UX/UI designning.</li>
 												<li>Freelancing.</li>
-												<li>UBlogging.</li>
+												<li>Blogging.</li>
 											</ul>
 
 										</div>
