--- a/About me.html
+++ b/About me.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>my-site</title>
+		<title>About me_my-site</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
