--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">January, 1 2021</span>
-									<Main><a href="#"><h2>Hello<br />
-									I am </h2><h1>Morris</h1></Main></a>
-									<p>I'm a Web Designer,Developer, Graphic designer, UX/UI designer,
-										Blogger and a Freelancer.</p>
+									<Main><a href="#"><h2>Hello!<br />
+									My name is </h2><h1>Morris</h1></Main></a>
+									<p>I'm a Web Designer & Developer, Graphic designer, UX/UI designer,
+										Content writter, Freelancer and a Blogger.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/IMG_20191025.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -71,7 +71,7 @@
 										<h2><a href="#">Web Design</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>I create websites for intrested clients, as well as personal portifolios and blogs.</p>
+									<p>I create and develop Websites, Logos, User experiences and Interfaces, Project and Research dodumentations and blogs for Interested Individuals and Organizations.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
@@ -99,18 +99,7 @@
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
-								<article>
-									<header>
-										<span class="date">January, 1 2021</span>
-										<h2><a href="#">My creative skills & experiences.<br />
-										</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>I have skills in coding and programming, which i gained through different platforms which include w3 schools and via Edureka. I have also learned about Web Development,and posted some of my articles in my Github repository.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
+								
 								<article>
 									<header>
 										<span class="date">January, 1 2021</span>
@@ -128,7 +117,20 @@
 										<h2><a href="#">UX/UI designing</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>sMy artistic nature automatically renders me excellent User expeience/ User interface designing capabilities.i use (Adobe Xd) to craete the prototypes for the UX/UI design</p>
+									<p>sMy artistic nature automatically renders me excellent User expeience/ User interface designing capabilities. I use (Adobe Xd) to craete the prototypes for the UX/UI designs</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">Full Story</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">January, 1 2021</span>
+										<h2><a href="#">My Skills & Achievements.<br />
+										</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<p>I have coding skills in; PHP, HTML, CSS, Javascript, Bootstrap languages which i gained through active learning and practice via Edureka, W3Schools, Github and Jekyll.<br>
+									I have used my coding skills to create websites In Wix.com., Wordpress - uisng Localbyflywheel and Github</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
