--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 										<h2><a href="#">UX/UI designing</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>sMy artistic nature automatically renders me excellent User expeience/ User interface designing capabilities. I use (Adobe Xd) to craete the prototypes for the UX/UI designs</p>
+									<p>My artistic nature automatically renders me excellent User expeience/ User interface designing capabilities. I use (Adobe Xd) to craete the prototypes for the UX/UI designs</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
