--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 										<h2><a href="#">Web Design</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>I create and develop Websites, Logos, User experiences and Interfaces, Project and Research dodumentations and blogs for Interested Individuals and Organizations.</p>
+									<p>I create and develop Websites, User experiences and Interfaces, portfolios and blogs for Interested Individuals and Organizations.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
@@ -106,7 +106,7 @@
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 									<p>I have coding skills in; PHP, HTML, CSS, Javascript, Bootstrap languages which i gained through active learning and practice via Edureka, W3Schools, Github and Jekyll.<br>
-									I have used my coding skills to create websites In Wix.com., Wordpress - uisng Localbyflywheel and Github</p>
+									I have used my coding skills to create websites In Wix.com., Wordpress - using Localbyflywheel and Github</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
