--- a/index.html
+++ b/index.html
@@ -161,11 +161,12 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">+254799799828</a></p>
+								<p><a href= href="tel:254799799828">+254799799828</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
 								<p><a href="#">mauricekyallo1@gmail.com</a></p>
+								
 							</section>
 							<section>
 								<h3>Social</h3>
