--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">mauricekyallo1@gmail.com</a></p>
+								<p><a href="mailto:mauricekyallo1@gmail.com">mauricekyallo1@gmail.com</a></p>
 								
 							</section>
 							<section>
