--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href= href="tel:254799799828">+254799799828</a></p>
+								<p>1
+								<a href="tel:+254799799828" onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});">+254799799828</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
