--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="tel:+254799799828" onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"><b>+254799799828</b></a></p>
+								<p>Click-><a href="tel:+254799799828" onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"><b>+254799799828</b></a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="mailto:mauricekyallo1@gmail.com"><b>mauricekyallo1@gmail.com</b></a></p>
+								<p>Click-> <a href="mailto:mauricekyallo1@gmail.com"><b>mauricekyallo1@gmail.com</b></a></p>
 								
 							</section>
 							<section>
