--- a/elements.html
+++ b/elements.html
@@ -1,4 +1,5 @@
-<!DOCTYPE HTML>
+<p>Click- <a href="tel:+254799799828" onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"><b>+254799799828</b></a></p>
+<p>Click- <a href="mailto:mauricekyallo1@gmail.com"><b>mauricekyallo1@gmail.com</b></a></p><!DOCTYPE HTML>
 <!--
 	created by Morris Kyalo 
 -->
@@ -486,11 +487,11 @@ print 'It took ' + i + ' iterations to sort the deck.';
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">+254799799828</a></p>
+								<p>Click- <a href="tel:+254799799828" onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"><b>+254799799828</b></a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">mauricekyallo1@gmail.com</a></p>
+								<p>Click- <a href="mailto:mauricekyallo1@gmail.com"><b>mauricekyallo1@gmail.com</b></a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
