--- a/About me.html
+++ b/About me.html
@@ -92,11 +92,11 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">+254799799828</a></p>
+								<p>Click- <a href="tel:+254799799828" onclick="ga('send', 'event', { eventCategory: 'Contact', eventAction: 'Call', eventLabel: 'Mobile Button'});"><b>+254799799828</b></a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">mauricekyallo1@gmail.com</a></p>
+								<p>Click- <a href="mailto:mauricekyallo1@gmail.com"><b>mauricekyallo1@gmail.com</b></a></p
 							</section>
 							<section>
 								<h3>Social</h3>
