--- a/About me.html
+++ b/About me.html
@@ -96,7 +96,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p>Click- <a href="mailto:mauricekyallo1@gmail.com"><b>mauricekyallo1@gmail.com</b></a></p
+								<p>Click- <a href="mailto:mauricekyallo1@gmail.com"><b>mauricekyallo1@gmail.com</b></a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
