--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 									<p>I'm a Web Designer & Developer, Graphic designer, UX/UI designer,
 										Content writter, Freelancer and a Blogger.</p>
 								</header>
-								<a href="#" class="image main"><img src="IMG_20210430_085947.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/IMG_20210430_085947.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">About me</a></li>
 								</ul>
